backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfs-backend-service
spec:
  type: NodePort
  selector:
    app: sfs-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
