ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sfs-ingress
spec:
  rules:
    - host: sfs.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sfs-backend-service
                port:
                  number: 8080
